fixed events page spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,12 @@
     box-sizing: border-box;
 }
 
+Html, body 
+{
+    max-width: 100%;
+    overflow-x: auto;
+ }
+
 h1 {
     text-align: center;
     font-size: 40px;
@@ -20,7 +26,6 @@ h2 {
 }
 
 .menu .item {
-    min-width: 150px;
     justify-content: center;
 }
 
@@ -38,24 +43,23 @@ main.ui.center {
 }
 
 html {
-    overflow-x: initial !important;
     position: relative;
-    min-height: 100%;
 }
 
 main {
     min-height: 100%;
+    min-width: 100%;
 }
 
 body {
     min-height: 100%;
+    min-width: 100%;
     height: fit-content;
 }
 
-.flex {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+.flexy {
+    display: flex !important; 
+    justify-content: center;
 }
 
 #artist-name {
